--- a/app/views/search_results/_pagy.html.haml
+++ b/app/views/search_results/_pagy.html.haml
@@ -1,8 +1,7 @@
 - query = params.permit(:q)
 
 = render UswdsComponents::PaginationComponent.new do
-  - if pagy.prev
-    = render UswdsComponents::PaginationComponent::Previous.new(url: url_for(query.merge(page: pagy.prev)))
+  = render UswdsComponents::PaginationComponent::Previous.new(url: url_for(query.merge(page: pagy.prev))) if pagy.prev
 
   - pagy.series.each do |item|
     - case item
@@ -15,5 +14,4 @@
     - when :gap
       = render UswdsComponents::PaginationComponent::Overflow.new
 
-  - if pagy.next
-    = render UswdsComponents::PaginationComponent::Next.new(url: url_for(query.merge(page: pagy.next)))
+  = render UswdsComponents::PaginationComponent::Next.new(url: url_for(query.merge(page: pagy.next))) if pagy.next
